# relude-fetch

./: .gitignore  Makefile  README.md  bsconfig.json  dune-project  package-lock.json  package.json  relude-fetch.opam  relude-fetch.opam.template
__tests__/: ReludeFetch_test.re  dune
examples/: Demo.re
examples/demo/: FileUploadDemo.re  Router.re  index.html
src/: ReludeFetch.re  ReludeFetch_Body.re  ReludeFetch_Error.re  ReludeFetch_FormData.re  ReludeFetch_Headers.re  ReludeFetch_Request.re  ReludeFetch_Response.re  dune
